--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "NODE_ENV=test mocha 'test/*.js'"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "ejs": "~2.5.7",
@@ -15,7 +14,10 @@
     "file-stream-rotator": "^0.2.1",
     "http-errors": "~1.6.2",
     "jssha": "^2.3.1",
+    "password-hash": "^1.2.2",
     "knex": "^0.14.6",
+    "express-session": "^1.16.2",
+    "csrf": "^3.1.0",
     "log4js": "^2.8.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.17",
